--- a/1.Week-1/Day-2/basics.html
+++ b/1.Week-1/Day-2/basics.html
@@ -20,8 +20,8 @@
         
         <!-- Basic Text Tags -->
         <section>   
-            <h2>Heading - 2</h2>
-            <h3>Heading - 3</h3>
+        <h2>Heading - 2</h2>
+        <h3>Heading - 3</h3>
         <h4>Heading - 4</h4>
         <h5>Heading - 5</h5>
         <h6>Heading - 6</h6>
@@ -62,14 +62,14 @@
     <section>
         <h2>4. Images</h2>
         <p>Images are added using the <code>&lt;img&gt;</code> tag. Example:</p>
-        <img src="https://via.placeholder.com/150" alt="Sample Image">
+        <img src="images.jpg" alt="Sample Image" title="Frontend development skills"  width="400px">
     </section>
 
     <!-- Tables -->
     <section>
         <h2>5. Tables</h2>
         <p>HTML tables are useful for displaying data in a tabular format:</p>
-        <table border="1">
+        <table>
             <tr>
                 <th>Column 1</th>
                 <th>Column 2</th>
